<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bootstrap_gray_dark"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.kantai.vieweaxmple.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_autoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_autoCompleteTextViewtext"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_draw2d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_draw2d"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_framAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_frameAnimation"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_gridView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_gridView"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_listView"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_recyclerCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_recyclerCardView"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_spinner"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

        <com.beardedhen.androidbootstrap.BootstrapButton
            android:id="@+id/main_button_tweenAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="main_Button_Click"
            android:text="@string/main_button_tweenAnimation"
            app:bootstrapBrand="regular"
            app:bootstrapSize="lg"
            app:buttonMode="regular"
            app:roundedCorners="true"
            app:showOutline="false" />

    </LinearLayout>
</ScrollView>